--- a/Leaf Counting and Area Estimation using 3D Point Cloud Data.ipynb
+++ b/Leaf Counting and Area Estimation using 3D Point Cloud Data.ipynb
@@ -7,6 +7,7 @@
    "source": [
     "**TAU02E** - **Tomi Maijala** (LUT), **Vinh Van** (TAU)\n",
     "\n",
+    "![whole_tree](./whole_tree.png)\n",
     "\n",
     "# Introduction\n",
     "\n",
@@ -152,7 +153,7 @@
    "id": "0ecbd26e",
    "metadata": {},
    "source": [
-    "`analyze_cluster_shape` function: compute the shape characteristics of a cluster using PCA. This figure [\\[Moorthy et al, 2020\\]](https://ieeexplore.ieee.org/document/8889474) can explain the meaning of linearity (lambda_1), planarity (lambda_2), and sphericity (lambda_3). \n",
+    "`analyze_cluster_shape` function: compute the shape characteristics of a cluster using PCA. This figure [\\[Moorthy et al, 2020\\]](https://ieeexplore.ieee.org/document/8889474) can explain the meaning of linearity ($\\lambda_1$), planarity ($\\lambda_2$), and sphericity ($\\lambda_3$). \n",
     "\n",
     "![Shape Analysis](./shape_analysis.png)"
    ]
@@ -183,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def score_function(points, labels, min_points=10, max_points=80, min_ratio=20, plane_threshold=0.02):\n",
+    "def score_function(points, labels, min_points=10, max_points=80,\n",
+    "                   min_ratio=20, plane_threshold=0.02):\n",
     "    \"\"\"\n",
     "        Receive some clustered points and their labels\n",
     "        and return a score based on quantity and quality of leaf-like clusters found\n",
@@ -193,11 +195,15 @@
     "        if cluster_label == -1:\n",
     "            continue  # skip noise\n",
     "        cluster_points = points[labels == cluster_label]\n",
-    "        is_leaf, linearity, planarity, sphericity = cluster_is_leaf_like(cluster_points, \n",
-    "                                                        min_points=min_points, \n",
-    "                                                        max_points=max_points, \n",
-    "                                                        min_ratio=min_ratio,\n",
-    "                                                        plane_threshold=plane_threshold)\n",
+    "        \n",
+    "        is_leaf,\\\n",
+    "        linearity,\\\n",
+    "        planarity,\\\n",
+    "        sphericity = cluster_is_leaf_like(cluster_points, \n",
+    "                                        min_points=min_points, \n",
+    "                                        max_points=max_points, \n",
+    "                                        min_ratio=min_ratio,\n",
+    "                                plane_threshold=plane_threshold)\n",
     "        if is_leaf:\n",
     "            leaf_cluster_id_2_stats[cluster_label] = (linearity, planarity, sphericity)\n",
     "            \n",
@@ -302,11 +308,12 @@
     "                        # remove outlier point\n",
     "                        labels[idx] = -1  # mark as noise\n",
     "            \n",
-    "            score, leaf_cluster_id_2_stats = score_function(scaled_points, labels, \n",
-    "                                                        min_points=min_points, \n",
-    "                                                        max_points=max_points, \n",
-    "                                                        min_ratio=min_ratio,\n",
-    "                                                    plane_threshold=plane_threshold)\n",
+    "            score, leaf_cluster_id_2_stats = score_function(scaled_points, \n",
+    "                                                labels, \n",
+    "                                                min_points=min_points, \n",
+    "                                                max_points=max_points, \n",
+    "                                                min_ratio=min_ratio,\n",
+    "                                                plane_threshold=plane_threshold)\n",
     "            \n",
     "            if score > best_score or (np.abs(score - best_score) <= 5 and len(leaf_cluster_id_2_stats) > best_num_leaf_clusters):\n",
     "                best_score = score\n",
@@ -325,13 +332,15 @@
    "source": [
     "Here, DBSCAN is choosen because it is able to find clusters of arbitrary shapes and sizes, and these clusters are sperated by sparse regions, which aligns well with our leaf cluster identification criteria. Here is a short explanation of DBSCAN: \n",
     "\n",
-    "<img src=\"./DBSCAN-Illustration.png\" alt=\"drawing\" width=\"320\" height=\"231\"/>\n",
+    "<!-- <img src=\"./DBSCAN-Illustration.png\" alt=\"drawing\" width=\"320\" height=\"231\"/> -->\n",
+    "![DBSCAN-Illustration](./DBSCAN-Illustration.png)\n",
     "\n",
     "In this diagram, minPts = 4. Point A and the other red points are core points, because the area surrounding these points in an ε radius contain at least 4 points (including the point itself). Because they are all reachable from one another, they form a single cluster. Points B and C are not core points, but are reachable from A (via other core points) and thus belong to the cluster as well. Point N is a noise point that is neither a core point nor directly-reachable. [\\[wikipedia\\]](https://en.wikipedia.org/wiki/DBSCAN)\n",
     "\n",
     "Also, in this algorithm, we use **RANSAC plane fitting** to refine the clusters found by DBSCAN. **RANSAC (RANdom SAmple Consensus)** can be used to find a planar fit for a set of 3D points, while being robust to outliers. In our case, we treat the x, y coordinates as inputs and z as the output to find a planar fit. Points within each cluster that are identified as outliers to this plane (based on a predefined threshold) are re-labeled as noise (-1). This step helps to further refine the clusters by removing points that do not conform to the planar structure expected of leaf surfaces. A short introduction to RANSAC can be found in [Fouhey, 2011](https://cs.nyu.edu/~fouhey/earlier/thesis/dfouhey_thesisPresentation.pdf).\n",
     "\n",
-    "<img src=\"./sphx_glr_plot_ransac_001 (1).png\" alt=\"drawing\" width=\"640\" height=\"462\"/>\n",
+    "<!-- <img src=\"./sphx_glr_plot_ransac_001 (1).png\" alt=\"drawing\" width=\"640\" height=\"462\"/> -->\n",
+    "![sphx_glr_plot_ransac_001 (1)](./sphx_glr_plot_ransac_001%20(1).png)\n",
     "\n",
     "image source: [sklearn RANSAC example](https://scikit-learn.org/stable/auto_examples/linear_model/plot_ransac.html)\n",
     "\n",
@@ -341,7 +350,7 @@
     "1. **Choose a set of parameter combinations** for `eps` and `min_samples` to try.\n",
     "2. **Apply DBSCAN**: For each parameter combination, run the DBSCAN algorithm on the cluster_points to generate initial cluster labels.\n",
     "3. **Initial Noise Filter**: Check the percentage of points classified as noise (label -1). If more than 20% of the total points are noise, discard this parameter set and move to the next iteration.\n",
-    "4. **Planar Refinement (RANSAC)**: Iterate through each identified cluster and attempt to fit a plane to the points using `RANSACRegressor`. It treats the x, y coordinates as inputs and z as the output to find a planar fit.Points within the cluster that are identified as outliers to this plane (based on the plane_threshold) are re-labeled as noise (-1).\n",
+    "4. **Planar Refinement (RANSAC)**: Iterate through each identified cluster and attempt to fit a plane to the points using `RANSACRegressor`. It treats the x, y coordinates as inputs and z as the output to find a planar fit.Points within the cluster that are identified as outliers to this plane (based on the `plane_threshold`) are re-labeled as noise (-1).\n",
     "5. **Scoring**: Calculate a fitness score for the current clustering using the `score_function`.\n",
     "6. **Optimization**: Compare the current score against the `best_score` recorded so far. **Update the best result if: The current score is strictly higher than the best score. OR the current score is within 5 points of the best score, but the current configuration yields a higher number of leaf clusters.**\n",
     "7. **Return**: Finally, return the configuration that produced the best score, including the cluster assignments, the count of leaf clusters, and the set of valid leaf label"
@@ -580,12 +589,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "2ea13a88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_1 = {\n",
+    "param = {\n",
     "    'dbscan':{\n",
     "        'min_points':12,\n",
     "        'max_points':70,\n",
@@ -631,7 +640,7 @@
    "id": "40909425",
    "metadata": {},
    "source": [
-    "### Area Estimation and Leaf Counting\n",
+    "## Area Estimation and Leaf Counting\n",
     "\n",
     "After identifying the leaf clusters, we estimate the area of each leaf cluster using the convex hull method. The convex hull of a set of points is the smallest convex shape that encloses all the points. For a leaf cluster, we compute the convex hull of its points and calculate its surface area. Since leaves are generally flat surfaces, we **approximate the leaf area as half the surface area of the convex hull.**"
    ]
@@ -751,13 +760,21 @@
     "We proposed a pipeline to identify leaves from a tree point cloud obtained by a terrestrial LiDAR scanner.\n",
     "\n",
     "The method go through several steps:\n",
-    "1. Keep only the tree half which faces the LiDAR scanner.\n",
-    "2. Cluster the tree into smaller clusters.\n",
+    "\n",
+    "1. Keep only the tree half which faces the LiDAR scanner. (to mitigate occlusion issues)\n",
+    "\n",
+    "2. Cluster the tree into smaller clusters using DBSCAN to reduce the search space for the next step. DBSCAN is choosen because it is able to find clusters of arbitrary shapes and sizes, and these clusters are sperated by sparse regions, which aligns well with our leaf cluster identification criteria.\n",
+    "\n",
     "3. For each smaller cluster, find the best clustering which gives the most leaf-like clusters. The clustering proposing methods are: **DBSCAN**; **RANSAC** plane fitting. The leaf-like clusters are identified by **shape analysis**. We use **exhaustive search over different hyperparameters and clustering methods**, and select the one which gives the highest score according to our **objective function**.\n",
+    "\n",
     "4. We compute leaf area for each identified leaf cluster and sum them up to get the total leaf area. The leaves areas are aproximated by half the **area of the convex hull** of the leaf clusters, because we assume the leaves are flat surfaces.\n",
+    "\n",
     "5. We only keep the leaves which have area below 0.2 m^2 and largest dimension below 1.0 m to **avoid suspiciously large clusters.**\n",
+    "\n",
     "6. We visualize the final result and show **CT scans along different axes, for qualitative evaluation.**\n",
+    "\n",
     "7. We report the total leaf area as our estimation of leaf area of the tree.\n",
+    "\n",
     "8. We use **simulated data from HELIOS++** for estimate the effect of occlusion."
    ]
   },
@@ -768,9 +785,15 @@
    "source": [
     "# Appendix\n",
     "\n",
-    "## The whole ipynb file\n",
-    "You can check all the results and plots in this file"
+    "## Github Repository\n",
+    "The code for this project can be found in this [GitHub repository](https://github.com/vinhvd749/tls_lidar_leaf_counting)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfdbfcb0",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
