--- a/Leaf Counting and Area Estimation using 3D Point Cloud Data.ipynb
+++ b/Leaf Counting and Area Estimation using 3D Point Cloud Data.ipynb
@@ -738,6 +738,17 @@
     "\n",
     "Rerun our leaf counting and area estimation pipeline on the HELIOS++ multi-scan data, we obtained a total of **1256 leaves with a combined leaf area of approximately 83.52 m^2.** \n",
     "\n",
+    "**Historgram of estimated leaf areas from HELIOS++ multi-scan data**\n",
+    "\n",
+    "![Multi-scan Leaf Area Histogram](./area_hist_simulated.png)\n",
+    "\n",
+    "**Histogram of largest distance between points in leaf clusters from HELIOS++ multi-scan data**\n",
+    "\n",
+    "![Multi-scan Largest Distance Histogram](./lenth_hist_simulated.png)\n",
+    "\n",
+    "We can see in the histograms that the average leaf area is about 0.06 m^2 and the average largest distance between points in leaf clusters is about 0.4 m, which are similar to the results from our single-scan data.\n",
+    "\n",
+    "\n",
     "So, **underestimation due to occlusion in our single-scan data is approximately: 27% for leaf count and 33% for leaf area.** The percentage of leaf count is lower than leaf area, because in casses where even half of a leaf is visible, our algorithm can still detect it as a leaf cluster, contributing to the leaf count, but the estimated area will be lower due to occlusion.\n",
     "\n",
     "This magnitude of underestimation seems reasonable given the significant occlusion observed in the single-scan point cloud. It highlights the importance of multi-angle scanning for more accurate leaf quantification in complex canopies. We can see there are a lot of occluded leaves (gray faded dots) in this CT scan:\n",
