--- a/Leaf Counting and Area Estimation using 3D Point Cloud Data.ipynb
+++ b/Leaf Counting and Area Estimation using 3D Point Cloud Data.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "**TAU02E** - **Tomi Maijala** (LUT), **Vinh Van** (TAU)\n",
     "\n",
-    "![whole_tree](./whole_tree.png)\n",
+    "![whole_tree](./abstract_a4.png)\n",
     "\n",
     "# Introduction\n",
     "\n",
