--- a/Leaf Counting and Area Estimation using 3D Point Cloud Data.ipynb
+++ b/Leaf Counting and Area Estimation using 3D Point Cloud Data.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "**TAU02E** - **Tomi Maijala** (LUT), **Vinh Van** (TAU)\n",
     "\n",
-    "![whole_tree](./abstract_natural.png)\n",
+    "![whole_tree](./images/abstract_natural.png)\n",
     "\n",
     "# Introduction\n",
     "\n",
@@ -31,7 +31,7 @@
     "This dataset only contains the 3D coordinates (X, Y, Z) of the points in the point cloud. So, there is no ground truth information for semantic segmentation\n",
     "(differentiating wood from leaf), or instance segmentation (distinguishing individual leaves), or total leaf area or leaf count. Therefore, we will rely mainly on qualitative analysis and comparison with simulated data from HELIOS++ to assess the reliability and accuracy of our methods.\n",
     "\n",
-    "![Tree Point Cloud](./dataset.png)\n",
+    "![Tree Point Cloud](./images/dataset.png)\n",
     "\n",
     "Here you can see that the point cloud is denser on the side facing the LiDAR scanner, while the back side (approximately Y > 15) is much sparser due to occlusion.\n",
     "\n",
@@ -155,7 +155,7 @@
    "source": [
     "`analyze_cluster_shape` function: compute the shape characteristics of a cluster using PCA. This figure [\\[Moorthy et al, 2020\\]](https://ieeexplore.ieee.org/document/8889474) can explain the meaning of linearity ($\\lambda_1$), planarity ($\\lambda_2$), and sphericity ($\\lambda_3$). \n",
     "\n",
-    "![Shape Analysis](./shape_analysis.png)"
+    "![Shape Analysis](./images/shape_analysis.png)"
    ]
   },
   {
@@ -236,7 +236,7 @@
     "### Initial Clustering\n",
     "After removing all the ground points by Z thresholding, removing the back half of the tree which is mostly occluded from the LiDAR scanner, we first cluster the tree into smaller clusters using [DBSCAN](https://en.wikipedia.org/wiki/DBSCAN) with fixed parameters (eps=0.07, min_samples=5). We then optimize the clustering within each smaller cluster using different clustering methods and hyperparameters.\n",
     "\n",
-    "![Initial Clustering](./initial_clustering.png)\n",
+    "![Initial Clustering](./images/initial_clustering.png)\n",
     "\n",
     "\n",
     "### DBSCAN"
@@ -333,14 +333,14 @@
     "Here, DBSCAN is choosen because it is able to find clusters of arbitrary shapes and sizes, and these clusters are sperated by sparse regions, which aligns well with our leaf cluster identification criteria. Here is a short explanation of DBSCAN: \n",
     "\n",
     "<!-- <img src=\"./DBSCAN-Illustration.png\" alt=\"drawing\" width=\"320\" height=\"231\"/> -->\n",
-    "![DBSCAN-Illustration](./DBSCAN-Illustration.png)\n",
+    "![DBSCAN-Illustration](./images/DBSCAN-Illustration.png)\n",
     "\n",
     "In this diagram, minPts = 4. Point A and the other red points are core points, because the area surrounding these points in an $\\epsilon$ radius contain at least 4 points (including the point itself). Because they are all reachable from one another, they form a single cluster. Points B and C are not core points, but are reachable from A (via other core points) and thus belong to the cluster as well. Point N is a noise point that is neither a core point nor directly-reachable. [\\[wikipedia\\]](https://en.wikipedia.org/wiki/DBSCAN)\n",
     "\n",
     "Also, in this algorithm, we use **RANSAC plane fitting** to refine the clusters found by DBSCAN. **RANSAC (RANdom SAmple Consensus)** can be used to find a planar fit for a set of 3D points, while being robust to outliers. In our case, we treat the x, y coordinates as inputs and z as the output to find a planar fit. Points within each cluster that are identified as outliers to this plane (based on a predefined threshold) are re-labeled as noise (-1). This step helps to further refine the clusters by removing points that do not conform to the planar structure expected of leaf surfaces. A short introduction to RANSAC can be found in [Fouhey, 2011](https://cs.nyu.edu/~fouhey/earlier/thesis/dfouhey_thesisPresentation.pdf).\n",
     "\n",
     "<!-- <img src=\"./sphx_glr_plot_ransac_001 (1).png\" alt=\"drawing\" width=\"640\" height=\"462\"/> -->\n",
-    "![sphx_glr_plot_ransac_001 (1)](./sphx_glr_plot_ransac_001%20(1).png)\n",
+    "![sphx_glr_plot_ransac_001 (1)](./images/sphx_glr_plot_ransac_001%20(1).png)\n",
     "\n",
     "image source: [sklearn RANSAC example](https://scikit-learn.org/stable/auto_examples/linear_model/plot_ransac.html)\n",
     "\n",
@@ -450,17 +450,17 @@
     "\n",
     "**Original Point Cloud:**\n",
     "\n",
-    "![Original Point Cloud](./original_clus.png)\n",
+    "![Original Point Cloud](./images/original_clus.png)\n",
     "\n",
     "\n",
     "**DBSCAN Clustering Result:**\n",
     "\n",
-    "![DBSCAN Clustering](./dbscan_clus.png)\n",
+    "![DBSCAN Clustering](./images/dbscan_clus.png)\n",
     "\n",
     "\n",
     "**RANSAC Clustering Result:**\n",
     "\n",
-    "![RANSAC Clustering](./ransac_clus.png)\n",
+    "![RANSAC Clustering](./images/ransac_clus.png)\n",
     "\n",
     "\n",
     "We can see that when the point cloud is dense with no clear separation between objects, DBSCAN tends to group multiple leaves into a single cluster. On the other hand, RANSAC is able to separate these leaves into different clusters by fitting planes and then using DBSCAN within each plane. But cutting a plane through multiple objects can also lead to over-segmentation, where a single leaf is split into multiple clusters if it is not perfectly planar, so we still keep both methods and choose the best one based on our objective function."
@@ -628,11 +628,11 @@
     "\n",
     "**CT scan along Z axis:**\n",
     "\n",
-    "![CT scan Z axis](./ct_scan_z.png)\n",
+    "![CT scan Z axis](./images/ct_scan_z.png)\n",
     "\n",
     "**CT scan along Y axis:**\n",
     "\n",
-    "![CT scan Y axis](./ct_scan_y.png)"
+    "![CT scan Y axis](./images/ct_scan_y.png)"
    ]
   },
   {
@@ -694,14 +694,14 @@
    "source": [
     "**A typical convex hull of a leaf cluster**\n",
     "\n",
-    "![Convex Hull](./convex_hull.png)\n",
+    "![Convex Hull](./images/convex_hull.png)\n",
     "\n",
     "**Histogram of estimated leaf areas**\n",
     "\n",
-    "![Leaf Area Histogram](./area_hist.png)\n",
+    "![Leaf Area Histogram](./images/area_hist.png)\n",
     "\n",
     "**Histogram of largest distance between points in leaf clusters**\n",
-    "![Largest Distance Histogram](./length_hist.png)"
+    "![Largest Distance Histogram](./images/length_hist.png)"
    ]
   },
   {
@@ -730,21 +730,21 @@
     "\n",
     "**Position of scanner in HELIOS++ multi-scan data:**\n",
     "\n",
-    "![HELIOS++ Scanner Position](./scanner_locations.png)\n",
+    "![HELIOS++ Scanner Position](./images/scanner_locations.png)\n",
     "\n",
     "**Compared to our single-scan data, the multi-scan data is denser and have duble the number of points:**\n",
     "\n",
-    "![HELIOS++ Multi-scan Point Cloud](./multi_scan_compared.png)\n",
+    "![HELIOS++ Multi-scan Point Cloud](./images/multi_scan_compared.png)\n",
     "\n",
     "Rerun our leaf counting and area estimation pipeline on the HELIOS++ multi-scan data, we obtained a total of **1256 leaves with a combined leaf area of approximately 83.52 m^2.** \n",
     "\n",
     "**Historgram of estimated leaf areas from HELIOS++ multi-scan data**\n",
     "\n",
-    "![Multi-scan Leaf Area Histogram](./area_hist_simulated.png)\n",
+    "![Multi-scan Leaf Area Histogram](./images/area_hist_simulated.png)\n",
     "\n",
     "**Histogram of largest distance between points in leaf clusters from HELIOS++ multi-scan data**\n",
     "\n",
-    "![Multi-scan Largest Distance Histogram](./lenth_hist_simulated.png)\n",
+    "![Multi-scan Largest Distance Histogram](./images/lenth_hist_simulated.png)\n",
     "\n",
     "We can see in the histograms that the average leaf area is about 0.06 m^2 and the average largest distance between points in leaf clusters is about 0.4 m, which are similar to the results from our single-scan data.\n",
     "\n",
@@ -753,7 +753,7 @@
     "\n",
     "This magnitude of underestimation seems reasonable given the significant occlusion observed in the single-scan point cloud. It highlights the importance of multi-angle scanning for more accurate leaf quantification in complex canopies. We can see there are a lot of occluded leaves (gray faded dots) in this CT scan:\n",
     "\n",
-    "![Occluded Leaves](./missing_leaf.png)\n",
+    "![Occluded Leaves](./images/missing_leaf.png)\n",
     "\n",
     "## Robustness\n",
     "\n",
