--- a/Leaf Counting and Area Estimation using 3D Point Cloud Data.ipynb
+++ b/Leaf Counting and Area Estimation using 3D Point Cloud Data.ipynb
@@ -340,7 +340,7 @@
     "Also, in this algorithm, we use **RANSAC plane fitting** to refine the clusters found by DBSCAN. **RANSAC (RANdom SAmple Consensus)** can be used to find a planar fit for a set of 3D points, while being robust to outliers. In our case, we treat the x, y coordinates as inputs and z as the output to find a planar fit. Points within each cluster that are identified as outliers to this plane (based on a predefined threshold) are re-labeled as noise (-1). This step helps to further refine the clusters by removing points that do not conform to the planar structure expected of leaf surfaces. A short introduction to RANSAC can be found in [Fouhey, 2011](https://cs.nyu.edu/~fouhey/earlier/thesis/dfouhey_thesisPresentation.pdf).\n",
     "\n",
     "<!-- <img src=\"./sphx_glr_plot_ransac_001 (1).png\" alt=\"drawing\" width=\"640\" height=\"462\"/> -->\n",
-    "![sphx_glr_plot_ransac_001 (1)](./images/sphx_glr_plot_ransac_001%20(1).png)\n",
+    "![sphx_glr_plot_ransac_001 (1)](./images/sphx_glr_plot_ransac_001.png)\n",
     "\n",
     "image source: [sklearn RANSAC example](https://scikit-learn.org/stable/auto_examples/linear_model/plot_ransac.html)\n",
     "\n",
